Closed
Bug 1340798
Opened 8 years ago
Closed 8 years ago
All reftests are orange on graphics branch after merge from m-c
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: kats, Assigned: ethlin)
References
Details
(Whiteboard: [gfx-noted])
Attachments
(1 file)
7.61 KB,
patch
|
jerry
:
review+
|
Details | Diff | Splinter Review |
I did a merge from m-c and now all the QR reftests on the graphics branch are failing. :( These are the new changes on the graphics branch:
https://hg.mozilla.org/projects/graphics/pushloghtml?changeset=6e2d0a0a93695edcd4ecd7f6fe9504e3e2a02c54
Since things were green on m-c, it must be some interaction between stuff that landed on m-c and stuff that landed on graphics. Here's the graphics changes since the last successful merge:
https://hg.mozilla.org/projects/graphics/pushloghtml?fromchange=501ad90b7bb0&tochange=6489e07b8265
It might also be that I screwed up the merge commit itself, although the only conflicts that mercurial reported seemed pretty minor.
Reporter | ||
Comment 1•8 years ago
|
||
Since there are fewer graphics changes, I'm bisecting by doing backouts of those csets. First try push is https://treeherder.mozilla.org/#/jobs?repo=try&revision=2dfc968a44bc758fe005bb3a040a77875075fd68
Reporter | ||
Comment 2•8 years ago
|
||
Locally the problems I'm seeing on graphics tip (chrome area is completely red in my Linux build) go away if I back out https://hg.mozilla.org/projects/graphics/rev/ce81b6b4c8f2 so I suspect that's having a bad interaction with something that came over from m-c.
Try push to confirm: https://treeherder.mozilla.org/#/jobs?repo=try&revision=634240fdcf614fbc525e00d59fa78f8b46d8534a
Blocks: 1337885
Reporter | ||
Comment 3•8 years ago
|
||
I did another try push at https://treeherder.mozilla.org/#/jobs?repo=try&revision=da27c963c511005d1141425be9e808ed3412a5b8 which also shows the errors. This (if I did it right) narrows down the m-c side of the range to a handful of changesets, which includes Matt's patches in bug 1325227. I kicked off another try push using a cset just before those patches to see if they're the culprit.
Reporter | ||
Comment 4•8 years ago
|
||
The "handful of changesets" is this: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?tochange=a19ac5da6082&fromchange=e244431cfea1 (again, assuming I did it correctly).
Reporter | ||
Comment 5•8 years ago
|
||
Ok, confirmed. There's some interaction between bug 1325227 and bug 1337885 that's causing these oranges.
Blocks: 1325227
Reporter | ||
Comment 6•8 years ago
|
||
Ethan/Matt, any idea what might be going on here?
Flags: needinfo?(matt.woodrow)
Flags: needinfo?(ethlin)
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 8•8 years ago
|
||
There is another problem. The graphics branch on MacOS will crash after the merge, since there is no implementation of CrossProcessSemaphore for Mac.
Comment 9•8 years ago
|
||
(In reply to Ethan Lin[:ethlin] from comment #8)
> There is another problem. The graphics branch on MacOS will crash after the
> merge, since there is no implementation of CrossProcessSemaphore for Mac.
From Bug 1340076, on mac, m-c default does not use ClientPaintedLayer.
Comment 10•8 years ago
|
||
From the following comparison of latest graphics branch, Bug 1337885 seems to cause reftest failures.
- default
https://treeherder.mozilla.org/#/jobs?repo=try&revision=1d32b0e772eeae08d11d17d738514334be0d97d9
- backout Bug 1337885
https://treeherder.mozilla.org/#/jobs?repo=try&revision=216162fbbde6fe64fc5258c89610fac6135bc8e4
Assignee | ||
Comment 11•8 years ago
|
||
I'm not sure why the two bugs are related. I'll back out Bug 1337885 first to make the reftests green.
Flags: needinfo?(ethlin)
Assignee | ||
Comment 12•8 years ago
|
||
Attachment #8839076 -
Flags: review?(hshih)
Updated•8 years ago
|
Attachment #8839076 -
Flags: review?(hshih) → review+
Comment 13•8 years ago
|
||
Pushed by ethlin@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/cf5f7c44a90d
Backout the change in bug 1337885 since it causes many reftest failures. r=jerry
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Comment 15•8 years ago
|
||
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/d15078c37f97
Back out the follow-up cset from bug 1337885 as well. r=me
Reporter | ||
Updated•8 years ago
|
Target Milestone: --- → mozilla54
Reporter | ||
Updated•8 years ago
|
Assignee: nobody → ethlin
You need to log in
before you can comment on or make changes to this bug.
Description
•