Bug 1340798 - Backout the change in bug 1337885 since it causes many reftest failures. r=jerry